[gd_scene load_steps=18 format=1]

[ext_resource path="res://scripts/menu/menu.gd" type="Script" id=1]
[ext_resource path="res://images/ui/window.png" type="Texture" id=2]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = 2.0
content_margin/right = 2.0
content_margin/top = 2.0
content_margin/bottom = 2.0
bg_color = Color( 0.188235, 0.12549, 0.0941176, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = false
draw_bg = true

[sub_resource type="StyleBoxFlat" id=2]

content_margin/left = 2.0
content_margin/right = 2.0
content_margin/top = 2.0
content_margin/bottom = 2.0
bg_color = Color( 0.12549, 0.25098, 0.313726, 1 )
light_color = Color( 0.12549, 0.313726, 0.376471, 1 )
dark_color = Color( 0.12549, 0.313726, 0.376471, 1 )
border_size = 4
border_blend = true
draw_bg = false

[sub_resource type="StyleBoxFlat" id=3]

content_margin/left = 2.0
content_margin/right = 2.0
content_margin/top = 2.0
content_margin/bottom = 2.0
bg_color = Color( 0.12549, 0.25098, 0.313726, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = false
draw_bg = true

[sub_resource type="StyleBoxFlat" id=4]

content_margin/left = 2.0
content_margin/right = 2.0
content_margin/top = 2.0
content_margin/bottom = 2.0
bg_color = Color( 0.12549, 0.188235, 0.25098, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = false
draw_bg = true

[sub_resource type="StyleBoxFlat" id=5]

content_margin/left = 2.0
content_margin/right = 2.0
content_margin/top = 2.0
content_margin/bottom = 2.0
bg_color = Color( 0.0627451, 0.0941176, 0.12549, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = false
draw_bg = true

[sub_resource type="StyleBoxFlat" id=6]

content_margin/left = 6.0
content_margin/right = 6.0
content_margin/top = 6.0
content_margin/bottom = 6.0
bg_color = Color( 0.0627451, 0.25098, 0.376471, 1 )
light_color = Color( 0, 0, 0, 1 )
dark_color = Color( 0, 0, 0, 1 )
border_size = 0
border_blend = false
draw_bg = true

[sub_resource type="StyleBoxFlat" id=7]

content_margin/left = 6.0
content_margin/right = 6.0
content_margin/top = 6.0
content_margin/bottom = 6.0
bg_color = Color( 0.12549, 0.376471, 0.501961, 1 )
light_color = Color( 0, 0, 0, 1 )
dark_color = Color( 0, 0, 0, 1 )
border_size = 0
border_blend = false
draw_bg = true

[sub_resource type="StyleBoxFlat" id=8]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = 8.0
content_margin/bottom = 8.0
bg_color = Color( 0, 0.0627451, 0.0941176, 1 )
light_color = Color( 0, 0, 0, 1 )
dark_color = Color( 0, 0, 0, 1 )
border_size = 0
border_blend = false
draw_bg = true

[sub_resource type="StyleBoxFlat" id=9]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = 8.0
content_margin/bottom = 8.0
bg_color = Color( 0.0627451, 0.376471, 0.501961, 1 )
light_color = Color( 0.0627451, 0.376471, 0.501961, 1 )
dark_color = Color( 0.0627451, 0.376471, 0.501961, 1 )
border_size = 4
border_blend = false
draw_bg = false

[sub_resource type="StyleBoxFlat" id=10]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.0627451, 0.12549, 0.188235, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = false
draw_bg = true

[sub_resource type="StyleBoxFlat" id=11]

content_margin/left = 8.0
content_margin/right = 8.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0, 0.0627451, 0.0941176, 1 )
light_color = Color( 0, 0, 0, 1 )
dark_color = Color( 0, 0, 0, 1 )
border_size = 0
border_blend = false
draw_bg = true

[sub_resource type="StyleBoxFlat" id=12]

content_margin/left = 8.0
content_margin/right = 8.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.0627451, 0.376471, 0.501961, 1 )
light_color = Color( 0.0627451, 0.376471, 0.501961, 1 )
dark_color = Color( 0.0627451, 0.376471, 0.501961, 1 )
border_size = 4
border_blend = false
draw_bg = false

[sub_resource type="StyleBoxTexture" id=13]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 2 )
margin/left = 2.0
margin/right = 2.0
margin/top = 26.0
margin/bottom = 2.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 24.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="Theme" id=14]

Button/colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.941176, 0.941176, 0.941176, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = SubResource( 1 )
Button/styles/focus = SubResource( 2 )
Button/styles/hover = SubResource( 3 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 5 )
HScrollBar/icons/decrement = null
HScrollBar/icons/decrement_hilite = null
HScrollBar/icons/increment = null
HScrollBar/icons/increment_hilite = null
HScrollBar/styles/grabber = SubResource( 6 )
HScrollBar/styles/grabber_hilite = SubResource( 7 )
HScrollBar/styles/scroll = SubResource( 8 )
HScrollBar/styles/scroll_focus = SubResource( 9 )
Panel/styles/panel = SubResource( 10 )
Panel/styles/panelf = null
Panel/styles/panelnc = null
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_hilite = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_hilite = null
VScrollBar/styles/grabber = SubResource( 6 )
VScrollBar/styles/grabber_hilite = SubResource( 7 )
VScrollBar/styles/scroll = SubResource( 11 )
VScrollBar/styles/scroll_focus = SubResource( 12 )
WindowDialog/colors/title_color = Color( 1, 1, 1, 1 )
WindowDialog/constants/close_h_ofs = 22
WindowDialog/constants/close_v_ofs = 20
WindowDialog/constants/title_height = 18
WindowDialog/constants/titlebar_height = 22
WindowDialog/fonts/title_font = null
WindowDialog/icons/close = null
WindowDialog/icons/close_hilite = null
WindowDialog/styles/panel = SubResource( 13 )

[sub_resource type="StyleBoxTexture" id=15]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 2 )
margin/left = 6.0
margin/right = 6.0
margin/top = 30.0
margin/bottom = 6.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 24.0
expand_margin/bottom = 0.0
draw_center = true

[node name="Menu" type="CanvasLayer"]

layer = 100
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )
__meta__ = {
"__editor_plugin_screen__": "Script"
}

[node name="Panel" type="Panel" parent="."]

visibility/light_mask = 0
anchor/left = 1
anchor/top = 3
anchor/right = 1
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = SubResource( 14 )
margin/left = 350.0
margin/top = 200.0
margin/right = 50.0
margin/bottom = -200.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]

visibility/light_mask = 0
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 4.0
margin/right = 4.0
margin/bottom = 4.0
alignment = 0

[node name="Button1" type="Button" parent="Panel/VBoxContainer"]

visibility/light_mask = 0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 292.0
margin/bottom = 62.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "SKIRMISH"
flat = false

[node name="Button5" type="Button" parent="Panel/VBoxContainer"]

visibility/light_mask = 0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 66.0
margin/right = 292.0
margin/bottom = 128.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Button7" type="Button" parent="Panel/VBoxContainer"]

visibility/light_mask = 0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 132.0
margin/right = 292.0
margin/bottom = 194.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Button2" type="Button" parent="Panel/VBoxContainer"]

visibility/light_mask = 0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 198.0
margin/right = 292.0
margin/bottom = 260.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "DECK"
flat = false

[node name="Button3" type="Button" parent="Panel/VBoxContainer"]

visibility/light_mask = 0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 264.0
margin/right = 292.0
margin/bottom = 326.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "OPTIONS"
flat = false

[node name="Button4" type="Button" parent="Panel/VBoxContainer"]

visibility/light_mask = 0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 330.0
margin/right = 292.0
margin/bottom = 392.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "QUIT"
flat = false

[node name="Deck" type="Panel" parent="."]

editor/display_folded = true
visibility/visible = false
visibility/self_opacity = 0.75
visibility/light_mask = 0
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = SubResource( 14 )
margin/left = 50.0
margin/top = 50.0
margin/right = 400.0
margin/bottom = 50.0
custom_styles/panel = SubResource( 15 )

[node name="HSeparator" type="HSeparator" parent="Deck"]

visibility/light_mask = 0
anchor/top = 3
anchor/right = 1
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 25.0
margin/top = 10.0
margin/right = 25.0
margin/bottom = -10.0

[node name="Deck" type="ScrollContainer" parent="Deck"]

visibility/light_mask = 0
anchor/right = 1
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 22.0
margin/right = 4.0
margin/bottom = 4.0
scroll/horizontal = false
scroll/vertical = true

[node name="GridContainer" type="GridContainer" parent="Deck/Deck"]

visibility/light_mask = 0
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 822.0
margin/bottom = 284.0
columns = 6

[node name="Cards" type="ScrollContainer" parent="Deck"]

visibility/light_mask = 0
anchor/top = 3
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = -22.0
margin/right = 4.0
margin/bottom = 4.0
scroll/horizontal = false
scroll/vertical = true

[node name="GridContainer" type="GridContainer" parent="Deck/Cards"]

visibility/light_mask = 0
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 822.0
margin/bottom = 284.0
columns = 6

[node name="Card" type="Panel" parent="Deck"]

visibility/self_opacity = 0.75
visibility/light_mask = 0
anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -50.0
margin/top = 0.0
margin/right = -350.0
margin/bottom = 425.0
custom_styles/panel = SubResource( 15 )

[node name="Panel" type="Panel" parent="Deck"]

visibility/self_opacity = 0.75
visibility/light_mask = 0
anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -50.0
margin/top = 200.0
margin/right = -350.0
margin/bottom = 0.0

[node name="VBoxContainer" type="VBoxContainer" parent="Deck/Panel"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 4.0
margin/right = 4.0
margin/bottom = 4.0
custom_constants/separation = 4
alignment = 0

[node name="ButtonSave" type="Button" parent="Deck/Panel/VBoxContainer"]

visibility/light_mask = 0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 292.0
margin/bottom = 61.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "SAVE"
flat = false

[node name="ButtonLoad" type="Button" parent="Deck/Panel/VBoxContainer"]

visibility/light_mask = 0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 65.0
margin/right = 292.0
margin/bottom = 126.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "LOAD"
flat = false

[node name="ButtonBack" type="Button" parent="Deck/Panel/VBoxContainer"]

visibility/light_mask = 0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 130.0
margin/right = 292.0
margin/bottom = 192.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "BACK"
flat = false

[node name="Add" type="Button" parent="Deck"]

anchor/left = 1
anchor/top = 3
anchor/right = 1
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 55.0
margin/right = -50.0
margin/bottom = 5.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "ADD"
flat = false

[node name="Remove" type="Button" parent="Deck"]

anchor/left = 1
anchor/top = 3
anchor/right = 1
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = -5.0
margin/right = -50.0
margin/bottom = -55.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "SUB"
flat = false

[node name="Text1" type="Label" parent="Deck"]

anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 4.0
margin/top = 4.0
margin/right = 4.0
margin/bottom = 20.0
text = "Deck: 0 / 30"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Text2" type="Label" parent="Deck"]

anchor/top = 3
anchor/right = 1
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 4.0
margin/top = -4.0
margin/right = 4.0
margin/bottom = -20.0
text = "Inventory: 0"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Title1" type="Label" parent="Deck"]

anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 2.0
margin/top = -22.0
margin/right = 2.0
margin/bottom = -2.0
text = "DECK"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Title2" type="Label" parent="Deck"]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = -52.0
margin/top = -22.0
margin/right = -348.0
margin/bottom = -2.0
text = "CARD"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Load" type="Panel" parent="Deck"]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 100.0
margin/right = -250.0
margin/bottom = 100.0
custom_styles/panel = SubResource( 15 )

[node name="Title" type="Label" parent="Deck/Load"]

anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 2.0
margin/top = -22.0
margin/right = 2.0
margin/bottom = -2.0
text = "LOAD"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ScrollContainer" type="ScrollContainer" parent="Deck/Load"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 4.0
margin/top = 4.0
margin/right = 4.0
margin/bottom = 54.0
scroll/horizontal = false
scroll/vertical = true

[node name="VBoxContainer" type="VBoxContainer" parent="Deck/Load/ScrollContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 972.0
margin/bottom = 362.0
custom_constants/separation = 4
alignment = 0

[node name="Button" type="Button" parent="Deck/Load/ScrollContainer/VBoxContainer"]

visibility/visible = false
rect/min_size = Vector2( 0, 32 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 972.0
margin/bottom = 32.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="New" type="LineEdit" parent="Deck/Load/ScrollContainer/VBoxContainer"]

rect/min_size = Vector2( 0, 32 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 972.0
margin/bottom = 32.0
placeholder/text = "FILENAME"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = true
caret/caret_blink_speed = 0.65

[node name="HBoxContainer" type="HBoxContainer" parent="Deck/Load"]

anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 4.0
margin/top = 50.0
margin/right = 4.0
margin/bottom = 4.0
alignment = 0

[node name="ButtonLoad" type="Button" parent="Deck/Load/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 321.0
margin/bottom = 46.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "LOAD"
flat = false

[node name="ButtonSave" type="Button" parent="Deck/Load/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 325.0
margin/top = 0.0
margin/right = 646.0
margin/bottom = 46.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "SAVE"
flat = false

[node name="ButtonBack" type="Button" parent="Deck/Load/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 650.0
margin/top = 0.0
margin/right = 972.0
margin/bottom = 46.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "BACK"
flat = false

[node name="BattleEnd" type="AcceptDialog" parent="."]

visibility/visible = false
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = SubResource( 14 )
margin/left = 150.0
margin/top = 50.0
margin/right = -150.0
margin/bottom = -50.0
popup/exclusive = true
window/title = ""
dialog/hide_on_ok = true

[node name="Quit" type="ConfirmationDialog" parent="."]

visibility/visible = false
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = SubResource( 14 )
margin/left = 150.0
margin/top = 50.0
margin/right = -150.0
margin/bottom = -50.0
popup/exclusive = true
window/title = "QUIT?"
dialog/hide_on_ok = true

[connection signal="pressed" from="Panel/VBoxContainer/Button1" to="." method="start"]

[connection signal="pressed" from="Panel/VBoxContainer/Button2" to="." method="show_deck"]

[connection signal="pressed" from="Panel/VBoxContainer/Button4" to="." method="show_quit"]

[connection signal="pressed" from="Deck/Panel/VBoxContainer/ButtonSave" to="." method="_show_deck_save"]

[connection signal="pressed" from="Deck/Panel/VBoxContainer/ButtonLoad" to="." method="_show_deck_load"]

[connection signal="pressed" from="Deck/Panel/VBoxContainer/ButtonBack" to="." method="show_main"]

[connection signal="pressed" from="Deck/Add" to="." method="add_card"]

[connection signal="pressed" from="Deck/Remove" to="." method="remove_card"]

[connection signal="text_changed" from="Deck/Load/ScrollContainer/VBoxContainer/New" to="." method="_set_deck_file"]

[connection signal="pressed" from="Deck/Load/HBoxContainer/ButtonLoad" to="." method="_deck_load"]

[connection signal="pressed" from="Deck/Load/HBoxContainer/ButtonSave" to="." method="_deck_save"]

[connection signal="pressed" from="Deck/Load/HBoxContainer/ButtonBack" to="Deck/Load" method="hide"]

[connection signal="confirmed" from="Quit" to="." method="quit"]


